flux/apps/networking/envoy-gateway/gateway-private/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway-private
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-cr
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy-proxy-private
  description: "Private Envoy Gateway for internal traffic"
